--- a/style/cadastro.css
+++ b/style/cadastro.css
@@ -3,9 +3,9 @@
     margin: 0%;
     padding: 0%;
     background-color: rgb(37, 58, 4); 
-    text-decoration: none;
+    text-decoration: none !important;
     color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
 
 #pagina{
@@ -59,6 +59,8 @@ nav{
 nav a{
     padding: 10px 30px;
     background-color: black;
+    color: white;
+    text-decoration: none;
 
 }
 
@@ -66,7 +68,13 @@ form{
     display: flex;
     flex-direction: column;
     padding: 10px;
-    
+    font-weight: bold;
+        
+}
+
+input{
+    background-color: white;
+    color: black;
 }
 
 #situacao{
@@ -96,6 +104,7 @@ form{
     align-items: center;
     color: white;
     border-radius: 10px;
+    margin-top: 20px;
 }
 
 #reset{
@@ -125,12 +134,12 @@ form{
     align-items: center;
     color: white;
     border-radius: 10px;
-   
-    
+    text-decoration: none;     
 }
 
 #voltar a{
     color: white;
     background-color: black;
+    text-decoration: none;
    
 }
