--- a/style/consultas.css
+++ b/style/consultas.css
@@ -1,11 +1,10 @@
-
 *{
     margin: 0%;
     padding: 0%;
     background-color: rgb(37, 58, 4); 
     text-decoration: none;
     color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
 
 #pagina{
@@ -39,6 +38,7 @@
     width: 90%;
     align-items: center;
     justify-content: center;
+    padding-right: 10%;
     font-size: 35px;
     font-weight: bold;
     background-color: transparent;
@@ -59,22 +59,14 @@ nav{
 nav a{
     padding: 10px 30px;
     background-color: black;
+    color: white;
+    text-decoration: none;
 
 }
 
-form{
+#cardsDiv{
     display: flex;
-    flex-direction: column;
-    padding: 10px;
-    
-}
-
-#situacao{
-    display: flex;
-    width: 100%;
-    height: 50px;
-    column-gap: 20px;
-    justify-content: left;
+    justify-content: center;
 }
 
 #resetPos{
@@ -96,6 +88,7 @@ form{
     align-items: center;
     color: white;
     border-radius: 10px;
+    margin-top: 20px;
 }
 
 #reset{
@@ -125,20 +118,12 @@ form{
     align-items: center;
     color: white;
     border-radius: 10px;
-   
-    
+    text-decoration: none;     
 }
 
 #voltar a{
     color: white;
     background-color: black;
+    text-decoration: none;
    
-}
-
-#login_texto{
-    display: flex;
-    width: 100%;
-    height: 100px;
-    justify-content: center;
-    align-items: center;
 }
