--- a/style/contato.css
+++ b/style/contato.css
@@ -2,9 +2,9 @@
     margin: 0%;
     padding: 0%;
     background-color: rgb(37, 58, 4); 
-    text-decoration: none;
+    text-decoration: none !important;
     color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
 
 #pagina{
@@ -37,6 +37,7 @@
     width: 90%;
     align-items: center;
     justify-content: center;
+    padding-right: 10%;
     font-size: 35px;
     font-weight: bold;
     background-color: transparent;
@@ -75,6 +76,7 @@
         width: 100%;
         height: 100px;
         justify-content: center;
+        text-decoration: none;
         
 }
     
@@ -88,6 +90,7 @@
         color: white;
         border-radius: 10px;
         border-color: white;
+        text-decoration: none;
         
     }
 
