--- a/style/esqueci.css
+++ b/style/esqueci.css
@@ -2,7 +2,7 @@
     margin: 0%;
     padding: 0%;
     background-color: rgb(37, 58, 4); 
-    text-decoration: none;
+    text-decoration: none !important;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -37,6 +37,7 @@
     width: 90%;
     align-items: center;
     justify-content: center;
+    padding-right: 10%;
     font-size: 35px;
     font-weight: bold;
     background-color: transparent;
@@ -125,7 +126,8 @@
     background-color: black;
     color: white;
     border-radius: 10px;
-   
+    text-decoration: none;
+}
     
 
 
