--- a/style/index.css
+++ b/style/index.css
@@ -15,6 +15,10 @@ nav ul li a:hover{
 
 
 .carousel-inner > .carousel-item > img {
-    width: 50%;
-    height: auto; 
+    width: 80%;
+    height: 90vh; 
+  }
+
+  #rodape{
+      color: white;
   }
