--- a/style/login.css
+++ b/style/login.css
@@ -87,6 +87,7 @@ nav a{
     font-size: 20px;
     align-items: center;   
     padding: 10px;
+    text-decoration: none;
 }
 
 .entrar:hover{
@@ -112,7 +113,8 @@ nav a{
 #botao{
     background-color: black;
     border-radius: 15px;
-    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
 }
 
 #esqueci{
@@ -125,5 +127,9 @@ footer{
     background-color: black;
     height: 80px;
     width: 100%;
+}
+
+.entrarLink{
+    text-decoration: none;
 }
 
