--- a/style/informacoes.css
+++ b/style/informacoes.css
@@ -9,6 +9,9 @@
 
 #pagina{
     margin: 0px auto; 
+    width: 100%;
+    height: 500px;
+
      
 }
 
@@ -45,9 +48,14 @@
        
 }
 
+#navDiv{
+    display: flex;
+}
+
 
 nav{
     display: flex;
+    width: 50%;
     height: 50px;
     align-items: center;
     font-weight: bold;
@@ -56,19 +64,99 @@ nav{
     
 }
 
+#bt-nav{
+    display: flex;
+    justify-content: end;
+}
+
+/* #bt-selecionar{
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid white;
+} */
+
 nav a{
-    padding: 10px 30px;
+    padding: 5px 30px;
     background-color: black;
     color: white;
     text-decoration: none;
 
 }
 
-#cardsDiv{
+#informacoesDiv{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
-    color: white;
+    align-items: center;
 }
+
+#planinhaInfo1{
+    width: 70%;
+    height: 70vh;
+    background-image: url(../imagens/EfetivoCoter.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-color: transparent;
+    margin: 10px 0px 15px 0px;
+}
+#planinhaInfo2{
+    width: 70%;
+    height: 70vh;
+    background-image: url(../imagens/PTTC_Coter.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-color: transparent;
+    margin: 10px 0px 15px 0px;
+    display: none;
+}
+#planinhaInfo3{
+    width: 70%;
+    height: 70vh;
+    background-image: url(../imagens/ForcaTrabalho_Coter.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-color: transparent;
+    margin: 10px 0px 15px 0px;
+    display: none;
+}
+#planinhaInfo4{
+    width: 70%;
+    height: 70vh;
+    background-image: url(../imagens/binary-4791836_1280.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-color: transparent;
+    margin: 10px 0px 15px 0px;
+    display: none;
+}
+
+#selecionar-menu{
+    margin-right: 30px;
+    border-radius: 5px;
+    border: 1px solid white;
+            
+}
+
+/* .selecionar-item{ 
+    background-color: white !important;
+    color: black !important;
+    border: 1px solid black;
+
+} */
+
+
 
 #resetPos{
     display: flex;
