--- a/style/informacoes1.css
+++ b/style/informacoes1.css
@@ -10,9 +10,7 @@
 #pagina{
     margin: 0px auto; 
     width: 100%;
-    height: 500px;
-
-     
+    height: 500px;    
 }
 
 #banner{
@@ -20,8 +18,7 @@
     align-items: center;
     justify-content: left;
     width: 100%;
-    height: 120px;
-   
+    height: 120px; 
 }
 
 #img1{
@@ -44,14 +41,12 @@
     padding-right: 10%;
     font-size: 35px;
     font-weight: bold;
-    background-color: transparent;
-       
+    background-color: transparent;  
 }
 
 #navDiv{
     display: flex;
 }
-
 
 nav{
     display: flex;
@@ -61,7 +56,6 @@ nav{
     font-weight: bold;
     column-gap: 20px;
     background-color: black;
-    
 }
 
 #bt-nav{
@@ -85,7 +79,6 @@ nav a{
     background-color: black;
     color: white;
     text-decoration: none;
-
 }
 
 #informacoesDiv{
@@ -117,7 +110,8 @@ nav a{
        background-position: center;
        background-color: transparent;
        margin: 10px 0px 15px 0px;
-   }
+       display: none;
+}
 #info3{
        background-image: url(../imagens/ForcaTrabalho_Coter.jpg); width: 70%;
        height: 70vh;
@@ -126,15 +120,17 @@ nav a{
        background-position: center;
        background-color: transparent;
        margin: 10px 0px 15px 0px;
+       display: none;
 }
 #info4{
-    background-image: url(../imagens/binary-4791836_1280.jpg); width: 70%;
+    background-image: url(../imagens/COTER_MF.JPG); width: 70%;
     height: 70vh;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
     background-color: transparent;
     margin: 10px 0px 15px 0px;
+    display: none;
 }
 
 #selecionar-menu{
