--- a/style/informacoes5.css
+++ b/style/informacoes5.css
@@ -117,6 +117,7 @@ nav a{
        background-position: center;
        background-color: transparent;
        margin: 10px 0px 15px 0px;
+       display: none;
    }
 #info3{
        background-image: url(../imagens/ForcaTrabalho_Coter.jpg); width: 70%;
@@ -126,15 +127,17 @@ nav a{
        background-position: center;
        background-color: transparent;
        margin: 10px 0px 15px 0px;
+       display: none;
 }
 #info4{
-    background-image: url(../imagens/binary-4791836_1280.jpg); width: 70%;
+    background-image: url(../imagens/Empr_MF.JPG); width: 70%;
     height: 70vh;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
     background-color: transparent;
     margin: 10px 0px 15px 0px;
+    display: none;
 }
 
 #selecionar-menu{
